[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "carta_backend"
version = "0.0.2"
description = "Carta backend in Python"
readme = "README.md"
requires-python = "==3.13.*"
license = { file = "LICENSE" }

authors = [
    { name = "Zhen-Kai Gao", email = "zkgao@asiaa.sinica.edu.tw" },
]

maintainers = [
    { name = "Zhen-Kai Gao", email = "zkgao@asiaa.sinica.edu.tw" },
]

dependencies = [
    "aiofiles>=24.1.0",
    "astropy>=7.1.0",
    "dask[distributed]>=2025.7.0",
    "loguru>=0.7.3",
    "numba>=0.61.2",
    "numcodecs<=0.15.1",
    "protobuf==5.29.3",
    "rasterio>=1.4.3",
    "shapely>=2.1.1",
    "starlette>=0.47.1",
    "uvicorn[standard]>=0.35.0",
    "xarray[io]>=2025.7.1",
    "zfpy>=1.0.1",
]

classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Astronomy",
]

[project.urls]
Repository = "https://github.com/izkgao/carta-backend-python"
Issues = "https://github.com/izkgao/carta-backend-python/issues"
Changelog = "https://github.com/izkgao/carta-backend-python/README.md"

[project.scripts]
carta-backend = "carta_backend.main:main"
